[package]
name = "m5stack-dial"
version = "0.1.0"
authors = ["Tasuku Suzuki <stasuku@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32s3-hal = { version = "0.12.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32s3"] }
# esp-alloc = { version = "0.3.0" }
# smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.4.0"
heapless = { version = "0.7.14", default-features = false }
embedded-graphics = "0.8.1"
display-interface-spi = "0.4.1"
embedded-hal = "0.2.7"
display-interface = "0.4.1"
gc9a01-rs = { version = "0.1.0", optional = true }
embedded-graphics-core = { version = "0.4.0", optional = true }
critical-section = { version = "1.1.2", optional = true }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[features]
default = ["graphics", "kaizensparc-gc9a01-rs", "dial", "button", "touch"]
graphics = ["embedded-graphics-core"]
kaizensparc-gc9a01-rs = []
IniterWorker-gc9a01-rs = ["gc9a01-rs"]
samjkent-gc9a01 = []
dial = ["critical-section"]
button = []
touch = []
